--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAHvSwXU2PSKF774hRoMtC",
+      "authorship_tag": "ABX9TyMHusOyCrrwfGOgmzRrjEFL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,13 +33,57 @@
         "id": "MdVcBzimHTVR"
       },
       "source": [
-        "# The objective of this project is to exploring the diffrent parts of the language including its strenghts and weaknesses.\n"
+        "# The objective of this project is to exploring the different parts of the language including its strenghts and weaknesses.\n",
+        "\n",
+        "# This is divided into parts:-\n",
+        "\n",
+        "* Data Types\n",
+        "* Collection Data Types\n",
+        "* Control Structure and Function \n",
+        "* Modules\n",
+        "* OOP Programming\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U5lVMUbuJrwP"
+      },
+      "source": [
+        "# Lets start with Data Types"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jQ1mgVdEHMsR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jQ1mgVdEHMsR",
+        "outputId": "b77dbf92-dfe0-46db-9dbd-5ed064b17bc2"
+      },
+      "source": [
+        "len( dir(__builtin__) )               # Don't use from this set as a name of identifier."
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "156"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-WFbqhueJ78G"
       },
       "source": [
         ""
