--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHusOyCrrwfGOgmzRrjEFL",
+      "authorship_tag": "ABX9TyP+XUMiZIzWnGaDzFzWnZtx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-WFbqhueJ78G"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WFbqhueJ78G",
+        "outputId": "e2d44482-c990-4ccb-8fa8-babdb4b7e63c"
+      },
+      "source": [
+        "for _ in range(5):\n",
+        "  print(_)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "mNwMvHsxNRyH",
+        "outputId": "950e9314-4a29-4264-d0ee-8f14f9a42f21"
+      },
+      "source": [
+        "1use = 3                        # Syntax error exception, whenever invalid identifier used"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-3cafc535e74d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1use = 3\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GzKgfUO2rvmv"
       },
       "source": [
         ""
