--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOefYv+XV+IhKMG83BQiCPE",
+      "authorship_tag": "ABX9TyO6jurjiq6LOYF9kfzJTS5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,31 +273,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T2zJm41s1p-4"
+      },
+      "source": [
+        "# Floating point\n",
+        "\n",
+        "* floating point\n",
+        "* decimals  (accuracy over speed,present in decimal module)\n",
+        "* complex number"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 165
         },
-        "id": "FSWY9-_ntufC",
-        "outputId": "ec61f4bb-6804-457f-cf5e-a44b825fa071"
+        "id": "y33wXEtx3WSd",
+        "outputId": "5260ccbb-7ead-439c-a0b7-8cac1923b2fe"
       },
       "source": [
-        "print(round(34,1))\n",
-        "print(round(34.34,1))\n",
-        "print(round(234.34,-1))"
+        "\"{ {0}} {1} }\".format(\"I'm in braces\", \"I'm not\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "34\n",
-            "34.3\n",
-            "230.0\n"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-c8b22f112504>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"{ {0}} {1} }\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"I'm in braces\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"I'm not\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: unexpected '{' in field name"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Bhuyosn3XQr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
