--- a/automateTheBoringStuff.ipynb
+++ b/automateTheBoringStuff.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "automateTheBoringStuff.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPxlpxIs3XVdcdjthwTKcl",
+      "authorship_tag": "ABX9TyO8ceP0ufOIBfqJC78whI9w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -241,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z01kZYmngENO",
-        "outputId": "fcdff5aa-98d6-4692-8ca3-db854a043043"
+        "outputId": "71c909bb-971d-4900-f092-124df7b2476a"
       },
       "source": [
         "# The Collatz sequence\n",
@@ -258,21 +258,25 @@
         "  return temp\n",
         "\n",
         "\n",
+        "try:\n",
+        "  i = int(input())\n",
+        "except ValueError:\n",
+        "  print('Oops!! Try Again..You must enter an integer')  \n",
         "\n",
-        "i = int(input())\n",
+        "\n",
+        "\n",
         "\n",
         "while(i!=1):\n",
         "  i = collatz(i)\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10\n",
-            "5\n",
+            "32\n",
             "16\n",
             "8\n",
             "4\n",
