--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6jurjiq6LOYF9kfzJTS5+",
+      "authorship_tag": "ABX9TyOQMfAh5VX9wOxJo9t9oWFG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
         "x = int(0o21)\n",
         "print(int('a4',16))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
         "\n",
         "# Binary operator available -  &,|,~,^,<<,>>"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
         "# 3 logical operator available - and,or,not\n",
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
       "source": [
         "\"{ {0}} {1} }\".format(\"I'm in braces\", \"I'm not\")\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -316,13 +316,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Bhuyosn3XQr"
+        "id": "5Bhuyosn3XQr",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "outputId": "03e76002-17e1-4721-89ac-a336ea876f22"
       },
       "source": [
-        ""
+        "l = [1,2,23,32,3,5,7,22]\n",
+        "\n",
+        "# quadratic \n",
+        "\n",
+        "max = l[0]\n",
+        "for i in range(len(l)):\n",
+        "  for j in range(len(l)):\n",
+        "    if l[j] > l[i]:\n",
+        "      max = l[j]\n",
+        "\n",
+        "print(max)\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-99bcfdf09343>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    for i in range(len(l)):\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-wpbbkdE7EL7",
+        "outputId": "720cba9e-b98c-4732-9bbb-cfbe24f5f219"
+      },
+      "source": [
+        "# linear \n",
+        "l = [1,2,23,32,3,5,7,22]\n",
+        "\n",
+        "\n",
+        "\n",
+        "max = l[0]\n",
+        "for i in range(len(l)):\n",
+        "  if l[i]>max:\n",
+        "    max = l[i]\n",
+        "\n",
+        "print(max)    \n",
+        "    "
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32\n"
+          ]
+        }
+      ]
     }
   ]
 }
