--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQMfAh5VX9wOxJo9t9oWFG",
+      "authorship_tag": "ABX9TyMd2ThqEWKWPXDlU6U8ldgS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -383,6 +383,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_r7G9tQBXm2E"
+      },
+      "source": [
+        "from timeit import Timer\n",
+        "\n",
+        "def time1():\n",
+        "  l = []\n",
+        "  for i in range(100):\n",
+        "    l.append(i)\n",
+        "\n",
+        "def time2():\n",
+        "  l = []\n",
+        "  for i in range(100):\n",
+        "    l = l + [i]    \n",
+        "\n",
+        "def time3():\n",
+        "  l = list(range(100))    \n",
+        "\n",
+        "def time4():\n",
+        "  l = [i for i in range(100)]\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "t1 = Timer('test1()','from __main__ import test1') "
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "znCL0QNNXtCL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
