--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMd2ThqEWKWPXDlU6U8ldgS",
+      "authorship_tag": "ABX9TyPBKWmZB2qfHQXECa0x6E8L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -420,7 +420,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "znCL0QNNXtCL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "znCL0QNNXtCL",
+        "outputId": "d1213c9f-fd55-4c6b-b4d3-8d230ad0bc80"
+      },
+      "source": [
+        "class Stack:\n",
+        "  def __init__(self):\n",
+        "    self.items = []\n",
+        "\n",
+        "  def push(self,val):\n",
+        "    self.items.append(val)  \n",
+        "\n",
+        "  def pop(self):  \n",
+        "    return self.items.pop()\n",
+        "\n",
+        "  def peek(self):\n",
+        "    return self.items[len(self.items)-1]  \n",
+        "\n",
+        "  def size(self):\n",
+        "    return len(self.items)  \n",
+        "\n",
+        "\n",
+        "\n",
+        "s = Stack()\n",
+        "s.push(2)    \n",
+        "s.push(3)\n",
+        "s.pop()\n",
+        "s.peek()\n",
+        "s.size()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SdQ9h8NpfRhS"
       },
       "source": [
         ""
