--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBKWmZB2qfHQXECa0x6E8L",
+      "authorship_tag": "ABX9TyO3pB4/zqP5Tr79K01K/R4C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -424,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "znCL0QNNXtCL",
-        "outputId": "d1213c9f-fd55-4c6b-b4d3-8d230ad0bc80"
+        "outputId": "80ddf24b-69b9-4d02-f984-9de8c0d70f7c"
       },
       "source": [
         "class Stack:\n",
@@ -443,6 +443,9 @@
         "  def size(self):\n",
         "    return len(self.items)  \n",
         "\n",
+        "  def isEmpty(self):\n",
+        "    return self.items == []  \n",
+        "\n",
         "\n",
         "\n",
         "s = Stack()\n",
@@ -450,19 +453,33 @@
         "s.push(3)\n",
         "s.pop()\n",
         "s.peek()\n",
-        "s.size()"
+        "s.size()\n",
+        "s.isEmpty()\n",
+        "s.pop()\n",
+        "s.isEmpty()\n",
+        "\n",
+        "\n",
+        "\n",
+        "st = \"sumit kumar gupta\"\n",
+        "\n",
+        "for i in st:\n",
+        "  s.push(i)\n",
+        "\n",
+        "rev = \"\"\n",
+        "\n",
+        "for i in range(s.size()):\n",
+        "  rev += s.pop()\n",
+        "\n",
+        "print(rev)  "
       ],
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "atpug ramuk timus\n"
+          ]
         }
       ]
     },
