--- a/Deep_DIve_Into_Python.ipynb
+++ b/Deep_DIve_Into_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep DIve Into Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO3pB4/zqP5Tr79K01K/R4C",
+      "authorship_tag": "ABX9TyNAmct/IJTbp9eMAOZQlzaZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -424,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "znCL0QNNXtCL",
-        "outputId": "80ddf24b-69b9-4d02-f984-9de8c0d70f7c"
+        "outputId": "bff98f95-1906-47d2-e59f-2e4001ea72c8"
       },
       "source": [
         "class Stack:\n",
@@ -470,15 +470,57 @@
         "for i in range(s.size()):\n",
         "  rev += s.pop()\n",
         "\n",
-        "print(rev)  "
+        "print(rev)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# balanced paranthesis problems\n",
+        "# ({[]})\n",
+        "\n",
+        "\n",
+        "paran = input()\n",
+        "\n",
+        "checker = Stack()\n",
+        "\n",
+        "for i in paran:\n",
+        "  if i=='(' or i=='{' or i=='[':\n",
+        "    checker.push(i)\n",
+        "  elif i==')' and checker.peek()=='(':\n",
+        "    checker.pop()\n",
+        "  elif i=='}' and checker.peek()=='{':\n",
+        "    checker.pop()\n",
+        "  elif i==']' and checker.peek()=='[':\n",
+        "    checker.pop()\n",
+        "  else:\n",
+        "    continue  \n",
+        "\n",
+        "\n",
+        "if checker.isEmpty() == True:\n",
+        "  print('Paranthesis are balanced')\n",
+        "else:\n",
+        "  print('Parathesis are not balanced')  \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "atpug ramuk timus\n"
+            "atpug ramuk timus\n",
+            "((((((())\n",
+            "Parathesis are not balanced\n"
           ]
         }
       ]
